NCL-5815 Update for JDK11