@@ -22,7 +22,7 @@
   <parent>
     <groupId>com.redhat.rcm</groupId>
     <artifactId>redhat-releng-tools</artifactId>
-    <version>9</version>
+    <version>10-SNAPSHOT</version>
   </parent>
 
   <groupId>org.commonjava.maven.ext</groupId>
@@ -74,14 +74,14 @@
     <projectOwner>Red Hat, Inc.</projectOwner>
     <projectEmail>jcasey@redhat.com</projectEmail>
 
-    <javaVersion>1.8</javaVersion>
+    <javaVersion>11</javaVersion>
     <javaTestVersion>${javaVersion}</javaTestVersion>
 
     <mavenVersion>3.5.0</mavenVersion>
     <atlasVersion>0.17.1</atlasVersion>
     <galleyVersion>0.16.6</galleyVersion>
 
-    <groovyVersion>2.5.7</groovyVersion>
+    <groovyVersion>3.0.5</groovyVersion>
     <unirestVersion>3.10.00</unirestVersion>
     <jsonPathVersion>2.3.0</jsonPathVersion>
     <slf4jVersion>1.7.30</slf4jVersion>
@@ -398,7 +398,7 @@
       <dependency>
         <groupId>org.eclipse.sisu</groupId>
         <artifactId>org.eclipse.sisu.plexus</artifactId>
-        <version>0.3.3</version>
+        <version>0.3.4</version>
       </dependency>
 
       <dependency>
@@ -483,7 +483,7 @@
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-bmunit</artifactId>
-        <version>4.0.4</version>
+        <version>4.0.13</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -495,13 +495,13 @@
       <dependency>
         <groupId>org.xmlunit</groupId>
         <artifactId>xmlunit-core</artifactId>
-        <version>2.1.1</version>
+        <version>2.7.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.xmlunit</groupId>
         <artifactId>xmlunit-matchers</artifactId>
-        <version>2.1.1</version>
+        <version>2.7.0</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -588,10 +588,21 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
+            <argLine>-Djdk.attach.allowAttachSelf</argLine>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <additionalClasspathElements>
               <additionalClasspathElement>${java.home}/../lib/tools.jar</additionalClasspathElement>
             </additionalClasspathElements>
+            <!-- ensure we don't inherit a byteman jar from any env settings -->
+            <environmentVariables>
+              <BYTEMAN_HOME/>
+            </environmentVariables>
+            <systemProperties>
+                <property>
+                    <name>org.jboss.byteman.home</name>
+                  <value/>
+                </property>
+            </systemProperties>
           </configuration>
         </plugin>
         <plugin>
@@ -609,11 +620,6 @@
               <exclude>**/src/test/resources/org/commonjava/maven/ext/io/pom.xml</exclude>
             </excludes>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>animal-sniffer-maven-plugin</artifactId>
-          <version>1.18</version>
         </plugin>
         <plugin>
           <groupId>org.jacoco</groupId>
@@ -667,22 +673,24 @@
             <id>attach-javadocs</id>
             <configuration>
               <sourcepath>${project.build.directory}/javadoc-generated-sources</sourcepath>
-              <doclet>org.commonjava.maven.ext.annotation.JavadocFilter</doclet>
-              <docletArtifact>
-                <groupId>org.commonjava.maven.ext</groupId>
-                <artifactId>pom-manipulation-annotation</artifactId>
-                <version>${project.version}</version>
-              </docletArtifact>
+<!--              <doclet>org.commonjava.maven.ext.annotation.JavadocFilter</doclet>-->
+<!--              <docletArtifact>-->
+<!--                <groupId>org.commonjava.maven.ext</groupId>-->
+<!--                <artifactId>pom-manipulation-annotation</artifactId>-->
+<!--                <version>${project.version}</version>-->
+<!--              </docletArtifact>-->
               <detectJavaApiLink>true</detectJavaApiLink>
               <quiet>true</quiet>
               <author>false</author>
+              <detectLinks>true</detectLinks>
               <links>
-                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-common/${project.version}</link>
-                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-io/${project.version}</link>
-                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-core/${project.version}</link>
-                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-cli/${project.version}</link>
-                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-ext/${project.version}</link>
-                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-integration-test/${project.version}</link>
+                <!-- TODO: Doesn't seem to work in JDK 11 -->
+<!--                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-common/${project.version}</link>-->
+<!--                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-io/${project.version}</link>-->
+<!--                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-core/${project.version}</link>-->
+<!--                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-cli/${project.version}</link>-->
+<!--                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-ext/${project.version}</link>-->
+<!--                <link>https://www.javadoc.io/doc/org.commonjava.maven.ext/pom-manipulation-integration-test/${project.version}</link>-->
 
                 <link>https://javadoc.io/doc/org.commonjava.maven.atlas/atlas-identities/${atlasVersion}</link>
                 <link>https://javadoc.io/doc/org.commonjava.maven.galley/galley-api/${galleyVersion}</link>
@@ -694,7 +702,7 @@
 
                 <link>https://www.javadoc.io/doc/org.slf4j/slf4j-api/${slf4jVersion}</link>
                 <link>https://www.javadoc.io/doc/com.jayway.jsonpath/json-path/${jsonPathVersion}</link>
-                <link>https://www.javadoc.io/doc/org.codehause.groovy/groovy-all/${groovyVersion}</link>
+                <link>https://www.javadoc.io/doc/org.codehaus.groovy/groovy-all/${groovyVersion}</link>
                 <link>https://fasterxml.github.io/jackson-core/javadoc/${jacksonJavadocVersion}</link>
               </links>
             </configuration>
@@ -704,29 +712,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>check-java-api</id>
-            <!-- It needs to run after class compilation. No need to include test classes -->
-            <!-- as it does not support it: https://github.com/mojohaus/animal-sniffer/issues/5 -->
-            <phase>process-classes</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-            <configuration>
-              <ignoreDependencies>true</ignoreDependencies>
-              <signature>
-                <groupId>org.codehaus.mojo.signature</groupId>
-                <artifactId>java18</artifactId>
-                <version>1.0</version>
-              </signature>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
